--- a/styles/style.css
+++ b/styles/style.css
@@ -1,49 +1,66 @@
 html {
   font-size: 10px;
   font-family: 'Monospace', monospace;
+  background-color: #EDC7b7;
 }
 
+body {
+  width: 80%;
+  margin: 0 auto;
+  background-color: #EEE2dc;
+  padding: 0 20px 20px 20px;
+  border: 5px solid;
+  border-image-source: linear-gradient(to bottom, #EEE2dc, #EDC7b7);
+  border-image-slice: 1;
+} 
 
 h1 {
   font-size: 40px;
-  /* text-align: center; */
+  text-align: center;
 }
 
 p, li {
   font-size: 16px;
-  line-height: 2;
+  line-height: 1.5;
   letter-spacing: 1px;
 }
-
 
 ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* min-height: 100vh; */
 }
 
-
-/* html {
-  background-color: #00539F;
+/*NAVBAR STYLES*/
+.topnav {
+  overflow: hidden;
+  text-align:center;
+  margin: auto;
 }
 
-body {
-  width: 600px;
-  margin: 0 auto;
-  background-color: #FF9500;
-  padding: 0 20px 20px 20px;
-  border: 5px solid black;
-} */
-
-/* h1 {
-  margin: 0;
-  padding: 20px 0;
-  color: #00539F;
-  text-shadow: 3px 3px 1px black;
+.topnav li{
+  display:inline;
 }
 
-img {
-  display: block;
-  margin: 0 auto;
-}   */
+.topnav a {
+  color: #123c69;
+  padding: 10px 14px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #BAB2B5;
+  color: whitesmoke;
+}
+
+/*IMAGE AND TEXT LAYOUT*/
+.row {
+  display: flex;
+  justify-content: center;
+  
+}
+
+.column {
+  padding: 2%;
+}
