completed first page draft

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,16 @@
 html {
   font-size: 10px;
-  font-family: 'Monospace', monospace;
-  background-color: #EDC7b7;
+  font-family: 'Source Serif Pro', serif;
+  background-color: #61988E;
 }
 
 body {
   width: 80%;
   margin: 0 auto;
-  background-color: #EEE2dc;
+  background-color: #D0CFEC;
   padding: 0 20px 20px 20px;
   border: 5px solid;
-  border-image-source: linear-gradient(to bottom, #EEE2dc, #EDC7b7);
+  border-image-source: linear-gradient(to bottom, #1E352F, #61988E);
   border-image-slice: 1;
 } 
 
@@ -43,7 +43,7 @@ ul {
 }
 
 .topnav a {
-  color: #123c69;
+  color: #1E352F;
   padding: 10px 14px;
   text-decoration: none;
   font-size: 17px;
@@ -51,7 +51,7 @@ ul {
 
 .topnav a:hover {
   background-color: #BAB2B5;
-  color: whitesmoke;
+  color: #EBEFBF;
 }
 
 /*IMAGE AND TEXT LAYOUT*/
@@ -63,4 +63,10 @@ ul {
 
 .column {
   padding: 2%;
+}
+
+/* ICON IMAGES */
+.icon {
+  width:50px;
+  height:50px;
 }
