--- a/styles/style.css
+++ b/styles/style.css
@@ -5,14 +5,19 @@ html {
 }
 
 body {
-  width: 80%;
-  margin: 0 auto;
+  width: 70%;
+  margin: 30px auto;
   background-color: #EAFDF8;
-  padding: 0 50px 50px 50px;
+  padding: 0 50px 20px 50px;
   border: 5px solid;
   border-image-source: linear-gradient(to top, #B6CBE2, #F9C1B4);
   border-image-slice: 1;
-} 
+}
+
+.bodyText {
+  width: 80%;
+  margin: auto;
+}
 
 h1 {
   font-size: 40px;
@@ -23,6 +28,16 @@ p, li {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 1px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  border: 2px solid;
+  border-image-source: linear-gradient(to top, #B6CBE2, #F9C1B4);
+  border-image-slice: 1;
 }
 
 ul {
@@ -51,7 +66,6 @@ ul {
 
 .topnav a:hover {
   background-color: #B6CBE2;
-  /* color: #EBEFBF; */
 }
 
 /*IMAGE AND TEXT LAYOUT*/
